# C-

./: AI_CLEANER_PLAN.md  LICENSE  LICENSE_SETUP.md  README.md  package.json
.github/workflows/: release.yml  test-build.yml
server/: .env.example  .gitignore  README.md  package-lock.json  package.json
server/scripts/: gen-cards.js
server/src/: config.js  crypto.js  db.js  index.js
server/src/admin/: index.html
server/src/routes/: admin.js  ai.js  api.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/ai_cleaner/: commands.rs  evidence.rs  llm_client.rs  mod.rs  prompt.rs  sanitize.rs
src-tauri/src/commands/: delete.rs  hotspot.rs  leftovers.rs  programdata.rs  registry.rs  system.rs  tools.rs
src-tauri/src/license/: client.rs  commands.rs  fingerprint.rs  guard.rs  mod.rs  storage.rs  token.rs
src-tauri/src/scanner/: hotspot.rs
src/api/: commands.ts
src/components/: DashboardHeader.tsx  Footer.tsx  SettingsModal.tsx  SplashScreen.tsx  index.ts
src/components/ai/: AiDecisionCard.tsx  AiSettingsPanel.tsx
src/components/license/: ActivationModal.tsx  LicenseInfoPanel.tsx  PremiumBadge.tsx  index.ts
src/components/modules/: AiCleanerModule.tsx  BigFilesModule.tsx  HotspotModule.tsx  LeftoversModule.tsx  index.ts
src/contexts/: DashboardContext.tsx  LicenseContext.tsx  index.ts
src/hooks/: useAiConfig.ts  usePremiumGuard.ts
