[package]
name = "LightC"
version = "2.4.4"
description = "Windows C盘智能清理工具"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cleanup_c_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = { version = "2.9.0", features = ["native-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 文件系统操作
walkdir = "2"              # 递归遍历目录
jwalk = "0.8"              # 并行目录遍历（Win11 下缓存 metadata）
glob = "0.3"               # 通配符路径展开
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }
# Windows系统API
winapi = { version = "0.3", features = ["fileapi", "winbase", "handleapi", "errhandlingapi", "sysinfoapi", "processenv"] }
# Windows注册表操作
winreg = "0.55"
# 错误处理
thiserror = "1"
# 日志
log = "0.4"
env_logger = "0.11"
# 并行处理
rayon = "1.10"
num_cpus = "1.16"
tauri-plugin-process = "2.3.1"
dirs = "6.0.0"
# 单例模式
once_cell = "1.19"
# 回收站操作
trash = "5"
# 正则匹配（卸载残留包名/版本号过滤）
regex = "1"
# ===== License / 卡密激活 =====
# Ed25519 签名验证（验证服务器下发的 license token）
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
# AES-GCM 加密 license.dat（基于机器指纹派生密钥）
aes-gcm = { version = "0.10", features = ["std"] }
# HKDF 密钥派生
hkdf = "0.12"
sha2 = "0.10"
# CRC32 校验位（卡密前端格式校验）
crc32fast = "1"
# HTTP 客户端（仅激活时调用后端 API）
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# HMAC 请求签名
hmac = "0.12"
# base64 (license token 编码)
base64 = "0.22"
# UUID（请求追踪用，可选）
uuid = { version = "1", features = ["v4"] }
